<resources>
    <string name="app_name">VPLM</string>
    <string name="setting">Setting</string>
    <string name="circle_layout_manger">Circle LayoutManager</string>
    <string name="circle_scale_layout_manager">Circle Scale LayoutManager</string>
    <string name="carousel_layout_manager">Carousel LayoutManager</string>
    <string name="gallery_layout_manager">Gallery LayoutManager</string>
    <string name="rotate_layout_manager">Rotate LayoutManager</string>
    <string name="scale_layout_manager">Scale LayoutManager</string>

    <string name="radius">Radius</string>
    <string name="item_space">Item Space</string>
    <string name="move_speed">Move Speed</string>
    <string name="distance_to_bottom">Distance To Bottom</string>
    <string name="angle_interval">Interval Angle</string>
    <string name="center_scale">Center Scale</string>
    <string name="rotate_angle">Rotate Angle</string>
    <string name="min_scale">Min Scale</string>
    <string name="max_alpha">Max Alpha</string>
    <string name="min_alpha">Min Alpha</string>
    <string name="toggle_infinite">Toggle Infinite</string>
    <string name="toggle_bring_center_in_front">Toggle Bring Center In Front</string>
    <string name="toggle_reverse_rotate">Toggle Reverse Rotate</string>
    <string name="toggle_auto_center">Toggle Auto Center</string>
    <string name="toggle_reverse">Toggle Reverse</string>
    <string name="flip_rotate">Flip Rotate</string>
    <string name="rotate_from_edge">Rotate From Edge</string>
    <string name="change_orientation">Change Orientation</string>
    <string name="gravity">Gravity</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="z_alignment">Z-Alignment</string>
    <string name="left_on_top">Left On Top</string>
    <string name="right_on_top">Right On Top</string>
    <string name="center_on_top">Center On Top</string>
</resources>
